packages/openbridge-webcomponents/src/integration-systems/integration-bar/integration-bar.css
* {
  box-sizing: border-box;
}

.wrapper {
  display: flex;
  padding: 0 var(--app-components-integration-system-topbar-margin-global);
  justify-content: space-between;
  align-items: center;
  background: var(--integration-container-global-color);
  box-shadow: var(--shadow-flat-x) var(--shadow-flat-y) var(--shadow-flat-blur)
    var(--shadow-flat-spread) var(--shadow-flat-color);
}

.content-container {
  display: flex;
  align-items: center;
}

.fleet-vessel-container {
  display: flex;
  align-items: center;
  gap: var(--app-components-integration-system-topbar-item-spacing, 8px);
}

.vessel-container {
  display: flex;
  align-items: center;
}
.home-button {
  width: var(--app-components-integration-system-icon-button-touch-target);
  height: var(--app-components-integration-system-icon-button-touch-target);
  justify-content: center;
  align-items: center;
  gap: 14px;
}
obc-icon-button::part(visible-wrapper) {
  background-color: transparent;
}

